--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app/app.js",
     "dev": "nodemon app/app.js",
-    "test": "test"
+    "test": "test",
+    "deploy": "gcloud app deploy --project sample-project-ts app.yaml",
   },
   "author": "TakuroSugahara",
   "license": "ISC",
