--- a/app.yaml
+++ b/app.yaml
@@ -25,3 +25,6 @@ handlers:
   - url: /.*
     script: auto
     secure: always
+
+vpc_access_connector:
+  name: 'projects/sample-project-ts/locations/asia-northeast1/connectors/server-less-vpc-ts'
