--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "docker-compose up",
     "watch": "nodemon app/app.js",
     "test": "test",
-    "deploy": "gcloud app deploy --project sample-project-ts app.yaml"
+    "deploy": "gcloud beta app deploy --project sample-project-ts app.yaml"
   },
   "author": "TakuroSugahara",
   "license": "ISC",
