--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      - DATABASE_URL:db://postgres:postgres@postgres:5432/db
       - NODE_ENV=development
       # - MONGO_DATABASE=mongodb://mongodb/myapp
     volumes:
@@ -15,16 +16,14 @@ services:
     ports:
       - 8081:8080
     tty: true
-    # links:
-    # - mongodb
-  # ローカルホストの27017 portと繋ぐ
-  # mongodb:
-  # image: mongo:latest
-  # environment:
-  # - MONGO_DATA_DIR=/data/db
-  # - MONGO_LOG_DIR=/dev/null
-  # # すでにportを使っている場合はホストマシン側のportを変更する
-  # ports:
-  # - 27017:27017
-  # command:
-  # - mongod
+  db:
+    image: postgres:alpine
+    container_name: test-db
+    tty: true
+    environment:
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_PORT: 5432
+      POSTGRES_DB: db
+    ports:
+      - '5434:5432'
