chore: dbへのlinksを設定

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     ports:
       - 8081:8080
     tty: true
+    links:
+      - db
   db:
     image: postgres:alpine
     container_name: test-db
